<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="@dimen/title_text_size"
        android:padding="@dimen/settings_title_padding"

        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/settings_tries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_tries"
        android:textSize="@dimen/settings_text_size"
        android:paddingLeft="@dimen/elements_padding"

        android:layout_below="@id/settings_title"/>

    <TextView
        android:id="@+id/settings_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_sets"
        android:textSize="@dimen/settings_text_size"
        android:paddingLeft="@dimen/elements_padding"
        android:paddingTop="@dimen/elements_padding"

        android:layout_below="@id/settings_tries"/>

</RelativeLayout>