<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:id="@+id/mainActivityLayout">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="@dimen/home_logo_size"
        android:layout_height="@dimen/home_logo_size"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"

        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/home_prom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prom"
        android:textSize="@dimen/home_prom_text_size"
        android:padding="@dimen/elements_padding"

        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/home_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_start_button"
        android:layout_margin="@dimen/elements_padding"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RelativeOverlap" />
    
    <ImageView
        android:id="@+id/home_settings"
        android:layout_width="@dimen/home_settings_size"
        android:layout_height="@dimen/home_settings_size"
        android:src="@drawable/settings"
        android:layout_margin="@dimen/elements_padding"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />

</RelativeLayout>